# omniguard

./: LICENSE  README.md  deepspeed_config.json  finetune.ipynb  main.py  pyproject.toml
scripts/: setup_h100.sh
src/data/: test.jsonl  test_chat.jsonl  train.jsonl  train_chat.jsonl
src/data/annotations/: 20251025_161628_d5957a56_video_68fd3c9a73bc8198b786a1d8e7b8874309f1b0907b4a562b.json  20251025_161635_5a96e2db_video_68fd3c9fcd9c819099fe012953d8720f0520f6f4f2523af8.json  20251025_161637_94cd76d7_video_68fd3c975eac8190a45833e763e717450992bb04ddbca625.json  20251025_161637_ef31e83a_video_68fd3c9c59d08193a20831a2b32b96f00b03e7f3c91a3117.json  20251025_161640_1c31fe6c_video_68fd3c9b249c819185e4fdfcad646e3608da846cb2941620.json  20251025_161648_59467454_video_68fd3c9aa13c8190a13db825910a571106dc33a8848c44cd.json  20251025_161648_aeafb547_video_68fd3c984f8c8190a1403b0a6e7b781a0fe81ba37653d8b4.json  20251025_161649_51f17ee0_video_68fd3c9a1f04819387a3ffc3d907b23206fc077f97f57cdb.json  20251025_161651_efad28a8_video_68fd3c97ac788190965181fe0d8bfcd50cb2b3b6d0afe62a.json  20251025_161652_67adca47_video_68fd3c99d934819385a8b330e7bc500b0c359e0ffd258b2b.json  20251025_162326_29affffe_video_68fd3e3508b081918a7d7d88b6f004680743b8390a37d4e6.json  20251025_162344_02ace326_video_68fd3e380a348190bc411164f1453d810129d685af93d0de.json  20251025_162347_3ff87216_video_68fd3e4835e08190980f4501a256cf2507a86434392b0fde.json  (+16 more)
src/data_utils/: build_sft_dataset.py  safety_labels.py
src/eval/: infer.py
src/train/: train_sft.py
