[project]
name = "vlm-finetune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "transformers>=4.44.0",
    "datasets>=2.20.0",
    "accelerate>=0.34.0",
    "peft>=0.12.0",
    "trl>=0.9.6",
    "bitsandbytes>=0.43.0; platform_system=='Linux'",
    "torch>=2.2.0",
    "numpy>=1.26.0",
]
